onboarding/stylesheets/css/forms.css
input {
    width: 100%;
    padding: .5rem;
    box-sizing: border-box;
    font-size: 1rem;
    border: none;
    border-bottom: 1px solid #296EFB;
    margin-bottom: 40px;
    background-color: rgba(43,48,61,0.10);
  }
  input:focus {
    outline: none;
    background-color: transparent;
  }
  .label-box {
    position: relative;
  }
  label {
    position: absolute;
    top: -72px;
    left: 8px;
    font-size: 16px;
    transition: 0.2s ease all;
    pointer-events: none;
    color: #296EFB;
    font-weight: 
  }
  input:focus ~ .label-box label,
  input:valid ~ .label-box label {
    font-size: 14px;
    transform: translateY(-35px);
    color: #296EFB;
  }
  input[class="btn"] {
    border: none;
    color: #fff;
    background: rgba(52,152,219,0.7);
    box-shadow: 0 3px 5px rgba(0,0,0,0.2);
  }
  input[class="btn"]:hover {
    cursor: pointer;
  }
  .label-box::before,
  .label-box::after {
    content: '';
    position: absolute;
    height: 2px;
    width: 0;
    bottom: 40px;
    background-color: #296EFB;
    transition: all 0.3s;
  }
  .label-box::before {
    left: 50%;
  }
  .label-box::after {
    right: 50%;
  }
  input:focus ~ .label-box::before,
  input:focus ~ .label-box::after {
    width: 50%;
  }

  .dg-form-check-label {
    margin-bottom: 0;
    top: 4px;
    font-size: 14px;
    position: relative;
}

  

